# strip-ansi-escapes

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: binary.rs
