[package]
name = "strip-ansi-escapes"
version = "0.1.1-alpha.0"
authors = ["Ted Mielczarek <ted@mielczarek.org>"]
license = "Apache-2.0/MIT"
description = "Strip ANSI escape sequences from byte streams."
homepage = "https://github.com/luser/strip-ansi-escapes"
repository = "https://github.com/luser/strip-ansi-escapes"
documentation = "https://docs.rs/strip-ansi-escapes"
readme = "README.md"
keywords = ["ansi", "escape", "terminal"]

[dependencies]
vte = "0.3.2"
